[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "dotenv>=0.9.9",
    "isort>=7.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "prompt-template>=1.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
